schema/testdata/errors/attribute_expression_complex.keel
model Order {
    fields {
        customer Customer
    }

    @permission(
        //expect-error:153:154:AttributeExpressionError:field 'postCod' does not exist
        expression: order.customer.address.firstLine == "123 Fake Street" || (order.customer.address.secondLine == "Fake Town" && order.customer.address.postCod == "ABC123"),
        actions: [get]
    )
}

model Customer {
    fields {
        name Text
        address Address
    }
}

model Address {
    fields {
        firstLine Text
        secondLine Text
        postCode Text
    }
}
